# real2GAME

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bash_replace.sh  build.sh  build_install.sh  clean.sh  clean_all.sh  clean_da.sh  coding_standard  coding_standards  compile.sh  compile_all.sh  compile_da.sh  create_directories.sh  game_properties.h  header.h  mo_shared.F90  mo_shared.f90  ndvar  run.sh  run_da.sh  run_manually.sh  run_ndvar.sh  run_real2game.sh  run_script.sh
.sh/: determine_latest_analysis_time.sh
build_scripts/: build.sh  build_install.sh  build_install_dev.sh  build_install_obs_collector.sh  build_install_obs_collector_dev.sh  build_install_preprocessing_dev.sh
core/: CMakeLists.txt  run.sh  run_ndvar.sh
core/src/: coordinator.c  enum.h  lin_algebra.c  ndvar.h  oi.c
doc/: doc.aux  doc.bbl  doc.bcf  doc.blg  doc.run.xml  doc.tex  doc.toc  references.bib
downloader/: dl_dwd.sh  dl_icon-d2.sh  dl_icon-eu.sh  dl_icon-global.sh  dl_sst.sh  run.sh
formatter/: CMakeLists.txt  clean_formatter.sh  compile.sh  compile_formatter.sh  info  run_formatter.sh
formatter/src/: control.F90  control.c  control.f90  formatter.c
input/: 1500010100
interpolation_creator/: CMakeLists.txt  compile.sh  coordinator.c  interpolation_creator  run.sh
interpolation_creator/.sh/: root_script.sh
interpolation_creator/src/: control.F90  control.c  control.f90  coordinator.c  coordinator.f90
interpolator/: control.F90  control.c  control.f90  coordinator.c  coordinator.f90  enum.h  interpolator.h  lin_algebra.f90  lin_algebra_dry.c  lin_algebra_moist.c  lin_algebra_wind.c  oi.c
obs_collector/: CMakeLists.txt  dl_dwd.sh  dl_sst.sh  run.sh
obs_collector/src/: formatter.c
run_configs/: test.sh
run_scripts/: nwp.sh
src/: coordinator.c  enum.h  game-da.h  lin_algebra.c  lin_algebra.f90  lin_algebra_dry.c  lin_algebra_moist.c  lin_algebra_wind.c  ndvar.h  oi.c  run.sh
templates/: mo_module.F90  mo_namelist_nml.F90  module.f90  namelist_nml.f90
