cmake_minimum_required(VERSION 3.10)
project(ndvar VERSION 0.0)
set(CMAKE_C_COMPILER gcc)
add_executable(
formatter src/formatter.c)
add_definitions(-Wall)
find_package(OpenMP)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
target_link_libraries(nformatter m netcdf eccodes)
install(TARGETS formatter DESTINATION bin)
enable_testing()
